KThinkBat 0.1.8 - 28 Jul 2006:
   * nicer layout in the ToolTip (using HTML)
   * get rid of a Preprocessor Makro
   * added Polish translation from Adam Golebiowski <adamg@pld-linux.org>

KThinkBat 0.1.7 - 24 Jul 2006:
   * typo in About box
   * added spanish traslation provided by Luis Guillermo Soblavarro
   * added some more info to the ToolTip

KThinkBat 0.1.6 - 23 Jul 2006:
   * ToolTip with (later more detailed) battery information
   * more code documentation
   * added icons provided by Luis Guillermo Sobalvarro <lgsobalvarro@e-genieria.com>, many thanks

KThinkBat 0.1.5 - 03 Feb 2006:
   * A right click gives now a Context Menu
   * minor code cleanup
   * added German translation

KThinkBat 0.1.5 Release Candidate 2 - 30 Jan 2006:
   * With this version, The Layout of the KThinkBat Applet is now completelly configurable
   * Config as a Singeleton
   * Configuration/Settings Dialog
   * KThinkBat can now display separate battery icons for each battery
   * The Power Meter can be disabled
   * Selectable Fonts

KThinkBat 0.1.5 Release Candidate 1 - 24 Jan 2006:
   * All Colors can be configured (see kthinkbat.kcfg)
   * The Color of the Power Consuption Text can be configured through 
     the Context Menu of KThinkBat
   * The update interval can be changed (in config file only atm)

KThinkBat 0.1.5 Beta 3 - 23 Jan 2006:
   * Support for KConfig XT
   * fixed a realy annoying bug witch local variables, so
     that all ACPI Fuel states where zero

KThinkBat 0.1.5 Beta 2 - 21 Jan 2006:
   * better Text justification (Alignment of Values in Gauge)
   * code cleanup for querying sysfs and proc interfaces
   * it is now optionally possible, to display the current power 
     consumption to the right instead of below the battery gauge 

KThinkBat 0.1.5 Beta 1 - 19 Jan 2006:
   * Support a second battery
   * change gauge fill color, if battery reached its alarm capacity

KThinkBat 0.1.5 Alpha 2 - 12 Jan 2006: